<resources>
    <string name="app_name">Telegram</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_to_change_phone_number">Tap to change phone number</string>
    <string name="add_a_few_words_about_yourself">Add a few words about yourself</string>
    <string name="username">Username</string>
    <string name="account">Account</string>
    <string name="online">online</string>
    <string name="edit_name">Edit name</string>
    <string name="log_out">Log out</string>
    <string name="enter_code">Enter code</string>
    <string name="sms_with_code_hint">We send you SMS with code</string>
    <string name="code_hint">- - - - - -</string>
    <string name="title_your_phone">Your Phone</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="code_verified">Code verified</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="apply">Apply</string>
    <string name="change_name_warning">Name shouldn\'t be empty</string>
    <string name="toast_name_updated">User\'s name updated</string>
    <string name="change_username_warning">Username shouldn\'t be empty</string>
    <string name="toast_username_updated">Username updated</string>
    <string name="username_already_exist_warning">User with this username already exist</string>
    <string name="biography">Biography</string>
    <string name="users_bio_updated">User\'s bio updated</string>
    <string name="data_updated">Data updated</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="message">Message</string>
    <string name="send_message_cd">Send message</string>
    <string name="chat_message_warning">Chat message shouldn\'t be empty</string>
    <string name="send_attachment">Send attachment</string>
    <string name="voice_message_recording_indicator">Voice message is recording</string>
    <string name="clear_chat">Clear chat</string>
    <string name="delete_chat">Delete chat</string>
    <string name="chat_deleted">Chat deleted</string>
    <string name="chat_cleared">Chat cleared</string>
    <string name="no_messages">No messages</string>
    <string name="create_group">Create group</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="group_name_empty_wrn">Group name shouldn\'t be empty</string>

    <plurals name="members_count">
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
    </plurals>
</resources>